<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.choreos</groupId>
  <artifactId>choreography_tests</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>choreography_tests</name>
  <url>http://maven.apache.org</url>
  
  <build>
   <plugins>
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.1</version>
           <configuration>
               <source>1.6</source>
               <target>1.6</target>
           </configuration>
       </plugin>
<!--
<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <version>2.10</version>
  <configuration>
    <parallel>classes</parallel>
    <threadCount>2</threadCount>
    <forkMode>once</forkMode>
    <perCoreThreadCount>false</perCoreThreadCount>
    <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
  </configuration>
</plugin>
-->
</plugins>
  </build>
  <repositories>  
   <repository>
      <id>ccslrepository</id>
      <name>ccsl</name>
      <url>http://valinhos.ime.usp.br:54080/maven/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.2</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>eu.choreos</groupId>
      <artifactId>rehearsal</artifactId>
      <version>0.7</version>
    </dependency>
  </dependencies>
</project>
